[workspace]
members = [
  "crates/matching-engine",
  "crates/price-feed",
  "crates/shared",
  "crates/ws-gateway"
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0.97"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread", "signal"] }
