[workspace]
members = [
  "crates/matching-engine",
  "crates/price-feed",
  "crates/shared",
  "crates/ws-gateway"
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0.97"
axum = { version = "0.8.4", features = ["ws"] }
chrono = { version = "0.4.41", features = ["serde"] }
dotenvy = "0.15.7"
futures-util = "0.3.31"
redis = { version = "0.32.4", features = ["tokio-comp"] }
rust_decimal = { version = "1.39.0", features = ["serde-with-str"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "rust_decimal", "macros"] }
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }
