[package]
name = "matching-engine"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
dotenvy.workspace = true
redis.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
shared = { path = "../shared" }
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
