[package]
name = "ws-gateway"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
dotenvy.workspace = true
futures-util.workspace = true
redis.workspace = true
serde.workspace = true
serde_json.workspace = true
shared = { path = "../shared" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
